--- a/pkixwebadm/pkixwebadm/web/templates/ROOT.html
+++ b/pkixwebadm/pkixwebadm/web/templates/ROOT.html
@@ -6,9 +6,10 @@
       <h1 class="display-4">{{ project_name }}</h1>
       <p class="lead">Version {{ project_version }}</p>
     </header>
+    {% include "widgets/certificate_ingest.html" %}
     <section>
       <p>
-        The application will appear here soon.
+        Under construction! More to come.
       </p>
     </section>
   </main>
