--- a/pkixwebadm/pkixwebadm/web/templates/base.html
+++ b/pkixwebadm/pkixwebadm/web/templates/base.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ title | default(project_name) }}</title>
     <link rel="stylesheet" href="{{ url_for('static', path='css/app.css') }}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="{{ url_for('static', path='vendor/libdmotservices/index.js') }}"></script>
+    <script src="{{ url_for('static', path='js/app.js') }}"></script>
   </head>
   <body>
     {% block body %}{% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
