--- a/pkixwebadm/pkixwebadm/web/templates/base.html
+++ b/pkixwebadm/pkixwebadm/web/templates/base.html
@@ -10,6 +10,18 @@
     <script src="{{ url_for('static', path='js/app.js') }}"></script>
   </head>
   <body>
+    <header class="border-bottom bg-dark text-light">
+      <div class="container d-flex justify-content-between align-items-center py-3">
+        <span class="fw-semibold text-uppercase">{{ project_name }}</span>
+        {% if show_logout is not defined or show_logout %}
+          <form method="post" action="{{ url_for('logout') }}">
+            <button type="submit" class="btn btn-outline-light btn-sm">
+              Log out
+            </button>
+          </form>
+        {% endif %}
+      </div>
+    </header>
     {% block body %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
